fix slider overflow

--- a/assets/css/datepicker.css
+++ b/assets/css/datepicker.css
@@ -1,5 +1,6 @@
 .SModalDatePicker .Content { 
     padding: 32px 40px 40px 40px;
+    overflow: hidden;
 }
 
 .SModalDatePicker .Container.noselect {
@@ -19,6 +20,9 @@
     grid-template-rows: auto auto auto auto auto auto;
 }
 
+.SModalDatePicker .calendar-wrapper {
+    overflow: hidden;
+}
 
 /* .SModalDatePicker .calendar__from {
     left: 0;
